apps/hoarder/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hoarder-web-svc
  namespace: hoarder
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hoarder-web
  type: LoadBalancer
