apps/hoarder/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoarder-route
  namespace: hoarder
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "hoarder.hoytlabs.app"
    external-dns.alpha.kubernetes.io/target: "external.drewpayment.com"
    external-dns.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "hoarder.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hoarder-web-svc
          port: 3000
          weight: 1
